--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,97 +1,121 @@
-.menuWrapper{
-    font-family: "Trebuchet MS", Arial, sans-serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: normal;
-    text-transform:uppercase;
-    letter-spacing: normal;
-    line-height: 1.45em;
-    position:relative;
-    margin:20px auto;
-    height:542px;
-    width:797px;
-    background-position:0 0;
-    background-repeat:no-repeat;
-    background-color:transparent;
+@import url('reset.css');
+body{
+	background:#555 url(../images/background.jpg) repeat top left;
+	color:#000;
+	font-family: 'PT Sans Narrow', Arial, sans-serif;
+	font-size:12px;
+	overflow-y:scroll;
 }
-ul.menu{
-    list-style:none;
-    width:797px;
+#container {
+   position:relative;
 }
-ul.menu > li{
-    float:left;
-    width:265px;
-    height:542px;
-    border-right:1px solid #777;
-    background-repeat:no-repeat;
-    background-color:transparent;
+#container img {
+   position:absolute;
+   top:-40px;
+   left:-10px;
 }
-ul.menu > li.last{
-    border:none;
+a{
+	color:#f0f0f0;
+	text-decoration:none;
 }
-.bg1{
-    background-image: url(../images/1.jpg);
+.clr{
+	clear:both;
 }
-.bg2{
-    background-image: url(../images/2.jpg);
+.container {
+	width:100%;
+	margin:0 auto;
 }
-.bg3{
-    background-image: url(../images/3.jpg);
+.header{
+	padding-top:10px;
 }
-ul.menu > li > a{
-    float:left;
-    width:265px;
-    height:50px;
-    margin-top:450px;
-    text-align:center;
-    line-height:50px;
-    color:#ddd;
-    background-color:#333;
-    letter-spacing:1px;
-    cursor:pointer;
-    text-decoration:none;
-    text-shadow:0px 0px 1px #fff;
+.more ul{
+	text-transform:uppercase;
+	font-size:13px;
+	font-weight:bold;
+	padding:20px 0px 30px 20px;
+	height:30px;
 }
-ul.menu > li ul{
-    list-style:none;
-    float:left;
-    margin-top:-180px;
-    width:100%;
-    height:110px;
-    padding-top:20px;
-    background-repeat:no-repeat;
-    background-color:transparent;
+.more ul li{
+	float:left;
+	margin:0px 1px;
 }
-ul.menu > li ul li{
-    display:none;
+.more ul li.selected a,
+.more ul li.selected a:hover{
+	background:#000;
+	color:#fff;
+	text-shadow:none;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px 5px 5px 5px;
 }
-ul.menu > li ul.sub1{
-    background-image:url(../images/bg1sub.png);
+.more ul li a{
+	text-shadow:1px 1px 1px #000;
+	color:#e3cbfe;
+	padding:3px 6px;
 }
-ul.menu > li ul.sub2{
-    background-image:url(../images/bg2sub.png);
+.more ul li a:hover{
+	color:#bda2dc;
 }
-ul.menu > li ul.sub3{
-    background-image:url(../images/bg3sub.png);
+h1{
+	margin:0 0 13px 0;
+	float:left;
+	clear:both;
+	font-size:34px;
+	padding:12px;
+	text-shadow:0px 0px 1px #000;
+	color:#f8f8f8;
+	font-family:'News Cycle', Georgia, serif;
 }
-ul.menu > li ul li a{
-    color:#fff;
-    text-decoration:none;
-    line-height:30px;
-    margin-left:20px;
-    text-shadow:1px 1px 1px #444;
-    font-size:11px;
+h1 span{
+	color:#e3cbfe;
+	text-align:right;
+	font-size:25px;
+	padding:0 10px;
 }
-ul.menu > li ul.sub1 li{
-    display:block;
+h2{
+	float:right;
+	color:#bda2dc;
+	padding:30px 20px 0 0;
 }
-ul.menu > li ul li a:hover{
-    border-bottom:1px dotted #fff;
+.content{
+	width:100%;
+	position:relative;
+	margin:20px 0 0 0;
+	clear:both;
+}
+/* Footer Style */
+.topbar{
+	position:relative;
+	width:100%;
+	height:100px;
+	line-height:10px;
+	bottom:0;
+	font-size:13px;
+	background:#000;
+	opacity:0.7;
+	text-transform:uppercase;
+	font-family: 'PT Sans Narrow', Arial, sans-serif;
+	z-index:4;
+}
+.topbar a{
+	padding:5px 10px;
+	letter-spacing:1px;
+	text-shadow:1px 1px 1px #000;
+	color:#ddd;
+	text-align:right;
+}
+.topbar a:hover{
+	color:#fff;
+}
+.topbar a span{
+	font-weight:bold;
+}
+.topbar span.right_ab{
+	position:absolute;
+	right:4px;
 }
 
-#footer {
- position:absolute;
- bottom:0;
- height:60px;
- background:#ccc;
+.mediaholder_innerwrap{
+	height: "50";
+	width: "50";
 }
